--- a/wecomp-pdf/style.scss
+++ b/wecomp-pdf/style.scss
@@ -20,9 +20,8 @@
         margin: 0 auto;
         color: #001028;
         background-color: #FFFFFF;
-        font-family: Arial, sans-serif;
+        font-family: 'Brandon', 'Arial', 'sans-serif';
         font-size: 12px;
-        font-family: Arial;
     }
 
     header {
@@ -95,7 +94,7 @@
     }
 
     #notices {
-        margin-top: 90px;
+        margin-top: 80px;
 
         div {
             font-size: 18px;
@@ -109,7 +108,7 @@
             font-size: 12px;
             line-height: 20px;
             color: #505050;
-            max-width: 290px;
+            max-width: 270px;
             width: 100%;
         }
     }
@@ -148,8 +147,8 @@
                 text-align: left;
 
                 div {
-                    font-size: 10px;
-                    line-height: 12px;
+                    font-size: 12px;
+                    line-height: 20px;
                     text-transform: uppercase;
                     color: #505050;
                     font-weight: bold;
@@ -157,7 +156,7 @@
                     span {
                         display: block;
                         font-size: 9px;
-                        line-height: 10px;
+                        line-height: 13px;
                         letter-spacing: 0.9px;
                         text-transform: uppercase;
                         color: #505050;
@@ -171,8 +170,8 @@
 
     .label-title {
         display: block;
-        font-size: 9px;
-        line-height: 10px;
+        font-size: 10px;
+        line-height: 15px;
         letter-spacing: 0.9px;
         text-transform: uppercase;
         color: #505050;
@@ -191,11 +190,12 @@
     .client-name {
         font-style: normal;
         font-weight: 900;
-        font-size: 20px;
-        line-height: 22px;
+        font-size: 24px;
+        line-height: 27px;
         /* or 110% */
         text-transform: uppercase;
         color: #505050;
+        max-width: 300px;
     }
 
     //#Checkcoe title
@@ -211,7 +211,9 @@
         }
 
         small {
-            font-size: 9px;
+            font-size: 12px;
+            max-width: 200px;
+            display: block;
         }
     }
 
@@ -281,14 +283,15 @@
         text-transform: uppercase;
         color: #505050;
         margin-bottom: 15px;
+        font-weight: 900;
 
         span {
-            font-size: 16px;
+            font-size: 17px;
             line-height: 19px;
             text-transform: uppercase;
             display: block;
             color: #505050;
-            font-weight: bold;
+            font-weight: 700;
         }
     }
 
@@ -337,7 +340,7 @@
 
         tbody {
             td {
-                padding: 10px 20px;
+                padding: 10px 10px;
                 font-size: 10px;
                 line-height: 12px;
                 text-transform: uppercase;
@@ -346,7 +349,7 @@
                 width: 25%;
 
                 &:first-child {
-                    font-weight: bold;
+                    font-weight: 900;
                 }
 
                 img {
